# meili-tracing-subscriber

./: .gitignore  Cargo.toml  README.md  start-meili.sh
data.ms/: instance-uid
data.ms/auth/: data.mdb  lock.mdb
data.ms/indexes/836d3026-3c23-444c-9d2b-be540cc578db/: data.mdb  lock.mdb
data.ms/tasks/: data.mdb  lock.mdb
src/: lib.rs  main.rs
