[package]
name = "meili-tracing-subscriber"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
rand = "0.9.1"
reqwest = { version = "0.12.19", features=["json"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features=["json", "env-filter"] }

[lib]
path = "./src/lib.rs"
