[package]
name = "meili-tracing-subscriber"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
reqwest = { version = "0.12.19", features=["json"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.6", features=["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features=["json", "env-filter"] }
uuid = { version = "1.17.0", features = ["v4"] }

[lib]
path = "./src/lib.rs"
